# Manipulative-Wheeled-Robot-for-Hospitality-Industry

./: CMakeLists.txt  README.md  package.xml  requirements.txt
config/: joint_names_robo9.yaml
launch/: display.launch  gazebo.launch  robo.launch  robo_teleop.launch
meshes/: base_link.STL  base_to_first_link.STL  end_effector_link.STL  first_link.STL  left_wheel.STL  right_wheel.STL  second_link.STL  tray_diffusor.STL
robot_part_files_solidworks/: .attribute^  Base2Link1Joint.SLDPRT  Link1-2Link2Joint.SLDPRT  Link1.SLDPRT  Link2.SLDPRT  RobotAssembly.SLDASM  Wheel.SLDPRT  end-effector.SLDPRT  robot-base.SLDPRT  tray-diffuser.SLDPRT  ~$Link1.SLDPRT
src/: Manipulator.py  autonomous_motion.py  autonomous_motion_turtlebot.py  robo_motion.py  robo_motion_v2.py  robo_motion_v3_only_arm_ik.py  teleop_template_dom.py
src/utils/: rrt_star.py
urdf/: modified_robo9_with_planning.urdf  modified_robo9_with_planning.xacro  robo9.csv  robo9.urdf  robo9.xacro
world/: BasicWorldv1  BasicWorldv2  Custom_Restaurant_World_V4  RoboWorldFinal  WorldFinal  custom_World_V3  obstacle_competition.world  pj5.world
